{
    "name": "TitleControls",
    "maps": [
        {
            "name": "TitleActions",
            "id": "de3566a4-d9db-4879-943d-421b0119acc0",
            "actions": [
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "6c2a97d5-801b-4eff-9a73-133bb0ddbc34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5ae73fc-8514-4ad8-879c-b034161ef5c5",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}